dark mode fix 2

--- a/css/site.css
+++ b/css/site.css
@@ -5,102 +5,155 @@ html {
   --theme-dark: #15191d;
   --palette-light: #faf9fe;
   --palette-0: #e5e2fa;
-  --palette-1: #cdc5f5;  
-  --palette-2: #b5a9f2;  
-  --palette-3: #9d8cee;  
-  --palette-4: #876eec;  
-  --palette-5: #714ee9;  
-  --palette-6: #5a3cbf;  
-  --palette-7: #442d91;  
-  --palette-8: #2f2065;  
-  --palette-9: #1c133c; 
+  --palette-1: #cdc5f5;
+  --palette-2: #b5a9f2;
+  --palette-3: #9d8cee;
+  --palette-4: #876eec;
+  --palette-5: #714ee9;
+  --palette-6: #5a3cbf;
+  --palette-7: #442d91;
+  --palette-8: #2f2065;
+  --palette-9: #1c133c;
   --pallette-10: #0f1a2e;
   --pallette-11: #263238;
-  
+
   color-scheme: light dark;
-  
+
   --background: light-dark(var(--theme-light), var(--theme-dark));
   --navback: light-dark(var(--palette-8), var(--palette-1));
   --panelback: light-dark(var(--palette-light), var(--pallette-10));
   --text: light-dark(var(--black), var(--white));
   --navtext: light-dark(var(--white), var(--black));
 }
-.w3-text-theme {color: light-dark(#7f30a1, #d39df2)}
-.w3-text-theme-2 {color: light-dark(#60247a, #e1bff6)}
 
-.w3-hover-theme:hover {color:#fff !important; background-color:#0f0441 !important}
-.w3-hover-text-theme:hover {color:#0f0441 !important}
-.w3-hover-border-theme:hover {border-color:#0f0441 !important}
-.w3-text-theme-dark {color:#4d2311 !important}
-.w3-text-theme-d1 {color:#8b3f1f !important}
+.w3-text-theme {
+  color: light-dark(var(--palette-4), var(--palette-0))
+}
+
+.w3-text-theme-2 {
+  color: light-dark(var(--palette-7), var(--palette-1))
+}
+
+.w3-hover-theme:hover {
+  color: #fff !important;
+  background-color: #0f0441 !important
+}
+
+.w3-hover-text-theme:hover {
+  color: #0f0441 !important
+}
+
+.w3-hover-border-theme:hover {
+  border-color: #0f0441 !important
+}
+
+.w3-text-theme-dark {
+  color: #4d2311 !important
+}
+
+.w3-text-theme-d1 {
+  color: #8b3f1f !important
+}
+
 .palette-shadow {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);}
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 .modeselector {
   margin: 4px;
+}
+
+.palette-tag {
+  background-color: light-dark(var(--palette-8), var(--palette-1));
+  color: light-dark(var(--white), var(--black));
+  display: inline-block;
+  padding-left: 8px;
+  padding-right: 8px;
+  text-align: center
 }
 
 body {
   background-color: var(--background);
   color: var(--text);
 }
-.nav-palette
-{
+
+.nav-palette {
   background-color: var(--navback);
   color: var(--navtext);
 }
+
 div {
   background-color: inherit;
 }
-.headbanner, .panel-theme {
+
+.headbanner {
+  background-color: var(--background);
+  color: var(--text);
+}
+
+.panel-theme {
   background-color: var(--panelback);
   color: var(--text);
 }
 
 #logo {
-    float: left;
-    width: 200px;
-    height: 40px;
-    background: url(../images/Ella-logo-white.png) no-repeat center;
-    display: block;
-  }
-body, h1, h2, h3, h4, h5, h6 {
-    font-family: "Raleway", Helvetica, Arial, sans-serif;
-  }
+  float: left;
+  width: 200px;
+  height: 40px;
+  background: url(../images/Ella-logo-white.png) no-repeat center;
+  display: block;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Raleway", Helvetica, Arial, sans-serif;
+}
 
 p {
-    font-family: "Alegreya Sans", "Raleway", sans-serif;
-    font-weight: 400;
-    font-size: 1.1em;
+  font-family: "Alegreya Sans", "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 1.1em;
 }
-.contrast{
+
+.contrast {
   font-family: "Source Serif 4";
   font-weight: 300;
   font-style: italic;
 }
+
 .bookpage {
   padding-top: 10px;
-  padding-left: 10px; 
+  padding-left: 10px;
 }
+
 .bookdetails p {
   font-family: "Roboto Condensed", serif;
   margin-top: 0px;
   margin-bottom: 0px;
 }
+
 .bookcover {
   width: 240px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 20px;
 }
-.booklist{
+
+.booklist {
   display: grid;
   grid-gap: 15px;
   grid-template-columns: repeat(auto-fit, minmax(150px, 160px));
   grid-auto-flow: dense;
 }
+
 .spacer {
   padding-bottom: 5px;
 }
+
 .booklist p {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -110,6 +163,7 @@ p {
   font-style: normal;
   font-size: small;
 }
+
 .booklist a {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -119,14 +173,16 @@ p {
   font-style: normal;
 
 }
-.thumbnail{
+
+.thumbnail {
   width: 125px;
   height: 190px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-right: 20px;
   margin-bottom: 20px;
 }
-.bookcard{
+
+.bookcard {
   line-height: 16px;
   font-weight: 400;
   font-family: "Alegreya Sans", "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -135,28 +191,35 @@ p {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
+
 .header {
   font-family: "Bebas Neue", "Raleway", Helvetica, Arial, sans-serif;
   font-size: 1.1em;
   text-transform: uppercase;
   letter-spacing: 0.0625em;
 }
+
 .bebas-neue-regular {
   font-family: "Bebas Neue", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
+
 .roboto-condensed-300 {
   font-family: "Roboto Condensed", serif;
   font-optical-sizing: auto;
   font-weight: 300;
   font-style: normal;
 }
+
 .content {
   margin: 0px 5px;
 }
 
 @media only screen and (min-width: 768px) {
+
   /* For desktop: */
-  .bookcover {float: right;}
+  .bookcover {
+    float: right;
+  }
 }
